--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/ArmelChesnais/tinyApp-exercise/issues"
   },
-  "homepage": "https://github.com/ArmelChesnais/tinyApp-exercise#readme"
+  "homepage": "https://github.com/ArmelChesnais/tinyApp-exercise#readme",
+  "dependencies": {
+    "ejs": "^2.5.6",
+    "express": "^4.15.2"
+  }
 }
